--- a/package.json
+++ b/package.json
@@ -9,10 +9,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "connect-flash": "^0.1.1",
+    "crypto": "^1.0.1",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
+    "express-messages": "^1.0.1",
+    "express-session": "^1.17.2",
+    "flash": "^1.1.0",
     "multer": "^1.4.3",
     "mysql": "^2.18.1",
+    "nedb": "^1.8.0",
+    "nedb-session-store": "^1.1.2",
     "pug": "^3.0.2",
     "rimraf": "^3.0.2",
     "routes": "^2.1.0",
