--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-messages": "^1.0.1",
     "express-session": "^1.17.2",
     "flash": "^1.1.0",
+    "mime-types": "^2.1.33",
     "multer": "^1.4.3",
     "mysql": "^2.18.1",
     "nedb": "^1.8.0",
