--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fancyapps/fancybox": "^3.5.7",
     "connect-flash": "^0.1.1",
     "crypto": "^1.0.1",
     "dotenv": "^10.0.0",
